# OpenGLDataVizCookbook

./: README.md
Chapter1/: compile.sh  main.cpp
Chapter2/: compile.sh  main.cpp
Chapter3/: main.cpp
Chapter4/: CMakeLists.txt
Chapter4/include/common/: common.h  controls.hpp  shader.hpp  texture.hpp
Chapter4/src/: controls.cpp  shader.cpp  texture.cpp
Chapter4/tools/simple/: main.cpp  simple.frag  simple.vert
Chapter4/tools/texture_mapping/: main.cpp  texture.vert
Chapter4/tools/texture_mapping2/: main.cpp  texture.frag
Chapter4/tools/video_processing/: main.cpp  texture_sobel.frag
Chapter6/: CMakeLists.txt
Chapter6/include/: ObjLoader.h  camera.h  shader.h
Chapter6/src/: ObjLoader.cpp  camera.cpp  shader.cpp
Chapter6/tools/render_model/: main.cpp  pointcloud.frag  pointcloud.vert
